# TTI

./: LICENSE  pyproject.toml
docs/: CODING_SPEC.md  structure.json  structure.jsonl
